--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html lang="en">
 <head>
+  
   <meta charset="utf-8">
   <title>Angular5Gmaps</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHqF3aAxF5bb-BbrXhw8bkoMKljTriRp4&callback=initMap"
+  type="text/javascript"></script>
+
 </head>
 <body>
+
   <app-root></app-root>
+
 </body>
 </html>
