--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
   
          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHqF3aAxF5bb-BbrXhw8bkoMKljTriRp4&callback=initMap"
   type="text/javascript"></script>
+	
+	<!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+            
 </head>
 <body>
 
